...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/CardViewLux"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_margin_cardview"
                android:layout_weight="1"
                android:minHeight="40dp"
...
                        android:textColor="@color/CardViewTextColor"
                        android:textSize="40dp"></TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardViewFull"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_margin_cardview"
                android:layout_weight="1"
                android:minHeight="40dp"
...
                        android:id="@+id/settingsTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Settings"
                        android:textColor="@color/CardViewTextColor"
                        android:textSize="30dp"></TextView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
...
        android:minHeight="40dp"
        card_view:cardBackgroundColor="@color/CardViewColor"
        card_view:cardCornerRadius="@dimen/cardview_corner_radius"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/LinearLayoutTemp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/CardViewVolume"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_margin_cardview"
                android:layout_weight="1"
                android:clickable="true"
...
                card_view:cardBackgroundColor="@color/CardViewColor"
                card_view:cardCornerRadius="@dimen/cardview_corner_radius"
                card_view:cardUseCompatPadding="true">

                <LinearLayout

                    android:id="@+id/LinearLayoutVolume"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:gravity="center"
                    android:onClick="OpenVolumeFragment"
...
                        android:textSize="40dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardViewPressure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_margin_cardview"
                android:layout_weight="1"
                android:minHeight="40dp"
...
                        android:textSize="40dp"></TextView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardViewHumidity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_margin_cardview"
                android:layout_weight="1"
                android:minHeight="40dp"
...
