<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/Temperature"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_margin_cardview"
        card_view:cardBackgroundColor="@color/CardViewColor"
        card_view:cardCornerRadius="@dimen/cardview_corner_radius"
        card_view:cardUseCompatPadding="true">


        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="0dp"
            android:clickable="true"
            android:onClick="CloseFragment"
            card_view:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tempLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Current Sound Level"
                android:textColor="@color/CardViewTextColor"
                android:textSize="40dp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/SoundImage"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginRight="50dp"
                    card_view:srcCompat="@drawable/speaker" />

                <TextView
                    android:id="@+id/SoundValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="10"
                    android:textColor="@color/CardViewTextColor"
                    android:textSize="45dp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_margin_cardview"
                card_view:cardBackgroundColor="@color/CardViewColor"
                card_view:cardCornerRadius="@dimen/cardview_corner_radius"
                card_view:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/SelectZoneTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Please click on specific zone to change value in it"
                    android:textColor="@color/CardViewTextColor"
                    android:textSize="25dp"
                    android:visibility="gone" />


                <TextView
                    android:id="@+id/SoundZoneValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="10"
                    android:textColor="@color/CardViewTextColor"
                    android:textSize="50dp"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/zoneCrollerLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        card_view:srcCompat="@drawable/minus" />

                    <ImageView
                        android:id="@+id/SoundZoneArc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        card_view:srcCompat="@drawable/arc" />

                    <ImageView
                        android:id="@+id/plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        card_view:srcCompat="@drawable/plus" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>