...
        android:layout_margin="@dimen/default_margin_cardview"
        card_view:cardBackgroundColor="@color/CardViewColor"
        card_view:cardCornerRadius="@dimen/cardview_corner_radius"
        card_view:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:clickable="true"
            android:onClick="CloseFragment"
            card_view:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="Settings"
                    android:textColor="@color/CardViewTextColor"
...
